# enterprise-talk-to-data

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Makefile  README.md  mlflow.db  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: README.md  master.md
docs/annexes/: phase_1_framing_annexes.md  phase_2_data_semantic_readiness_annexes.md  phase_3_governed_data_foundation_annexes.md  phase_4_design_architecture_annexes.md  phase_5_prototype_mvp_build_annexes.md  phase_6_validation_assurance_remediation_annexes.md  phase_7_controlled_pilot_annexes.md  phase_8_production_readiness_annexes.md  phase_9_operate_adopt_improve_annexes.md
docs/phases/: phase_1_framing.md  phase_2_data_semantic_readiness.md  phase_3_governed_data_foundation.md  phase_4_design_architecture.md  phase_5_prototype_mvp_build.md  phase_6_validation_assurance_remediation.md  phase_7_controlled_pilot.md  phase_8_production_readiness.md  phase_9_operate_adopt_improve.md
evaluation_results/: eval_2026-06-23_v10.json  eval_2026-06-23_v6.json  eval_2026-06-23_v8.json
scripts/: build.ps1  build_pdfs.py
src/: Makefile  PRODUCTION_PRACTICES.md  README.md  TECH_STACK.md  docker-compose.yml  mlflow.db  msodbcsql.msi  requirements.txt
src/backend/: evaluation_runner.py  main.py
src/docs/: VIEW_SELECTION_SERVICE.md
src/evaluation_results/: eval_2026-06-23_v7.json
src/frontend/: package-lock.json  (+1 more)
src/newspaper-talk-to-data/: .gitignore  README.md  pyproject.toml
src/newspaper-talk-to-data/metadata/schema_descriptions/: vw_ingestion_errors.yml  vw_top_contributors.yml
(+95 files in other folders)
