[tool.poetry]
name = "newspaper-talk-to-data"
version = "0.1.0"
description = "Talk-to-data backend for newspaper analytics"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.dev-dependencies]
pytest = "^8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
